# Broadsword

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  BROADSWORD_PROGRESS.md  BROADSWORD_REDESIGN.md  BUILD.md  CHECKPOINTS.md  CMakeLists.txt  CMakePresets.json  FRAMEWORK_TO_BROADSWORD_MIGRATION.md  LICENSE  PHASE1_BUILD_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_STATUS.md  README.md  broadsword.py  deploy.ps1  vcpkg.json
Engine/: ProcessEventHook.cpp  ProcessEventHook.hpp
Engine/SDK/: LICENSE  NameCollisions.inl  README.md  SDK.hpp  SDKPch.cpp  SDKPch.h
Engine/SDK/SDK/: ABP_CopyPose1_functions.cpp  ABP_CopyPose1_structs.hpp  ABP_CopyPose2_functions.cpp  ABP_CopyPose2_structs.hpp  ABP_CopyPose_functions.cpp  ABP_CopyPose_structs.hpp  ABP_Parts_classes.hpp  ABP_Parts_functions.cpp  ABP_Parts_structs.hpp  ABP_Willie_classes.hpp  ABP_Willie_functions.cpp  ABP_Willie_parameters.hpp  ABP_Willie_structs.hpp  ACLPlugin_functions.cpp  AIModule_classes.hpp  AIModule_functions.cpp  AIModule_parameters.hpp  AI_BP_classes.hpp  AI_BP_functions.cpp  AI_BP_parameters.hpp  ActorLayerUtilities_functions.cpp  ActorSequence_functions.cpp  AdvancedWidgets_functions.cpp  AndroidFileServer_functions.cpp  AndroidPermission_functions.cpp  AnimGraphRuntime_classes.hpp  AnimGraphRuntime_functions.cpp  AnimationSharing_functions.cpp  AppleImageUtils_functions.cpp  Arena_Cutting_Map_classes.hpp  Arena_Cutting_Map_functions.cpp  Arena_Cutting_Map_parameters.hpp  AssetRegistry_functions.cpp  AssetTags_functions.cpp  AudioAnalyzer_functions.cpp  AudioCapture_functions.cpp  AudioExtensions_functions.cpp  AudioLinkEngine_functions.cpp  AudioMixer_functions.cpp  AudioSynesthesia_functions.cpp  (+636 more)
Foundation/Hooks/: InlineHook.cpp  InlineHook.hpp  VTableHook.cpp  VTableHook.hpp
Foundation/Injection/: DllHijack.cpp  DllHijack.hpp
Foundation/Memory/: MemoryUtils.hpp  PatternScanner.hpp
Foundation/Threading/: GameFrameHook.cpp  GameFrameHook.hpp  GameThreadExecutor.cpp  GameThreadExecutor.hpp
Framework/Core/: DllMain.cpp  ModContext.hpp  ModLoader.cpp  ModLoader.hpp
Framework/Graphics/: DX11Backend.cpp  DX11Backend.hpp  DX12Backend.cpp  DX12Backend.hpp  RenderBackend.cpp  RenderBackend.hpp
Framework/UI/: AboutWindow.cpp  AboutWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  ModMenuUI.cpp  ModMenuUI.hpp  NotificationManager.cpp  NotificationManager.hpp  SettingsWindow.cpp  SettingsWindow.hpp
Framework/World/: ActorSpawner.hpp  QueryEngine.hpp  WorldFacade.cpp  WorldFacade.hpp
ModAPI/: Broadsword.hpp  Config.hpp  Error.hpp  Frame.hpp  HookContext.cpp  HookContext.hpp  Mod.hpp  ModInfo.hpp  Result.hpp
Mods/Enhancer/: CMakeLists.txt  Enhancer.cpp  EnhancerMod.cpp  EnhancerMod.hpp
Proxy/: CMakeLists.txt  DllMain.cpp  Exports.def  dwmapi.def
Services/Config/: ConfigManager.hpp  Reflection.hpp  UniversalConfig.hpp
Services/EventBus/: EventBus.hpp  EventTypes.hpp
Services/Input/: InputContext.hpp
Services/Logging/: LogEntry.hpp  Logger.cpp  Logger.hpp
Services/UI/: BindingManager.cpp  BindingManager.hpp  Theme.cpp  Theme.hpp  UIContext.cpp  UIContext.hpp
docs/: BUILD_TOOL.md
